# seal-crypto

./: Cargo.toml  README.md  README_CN.md  TestMatrix.toml  macos-latest.json  test-matrix.ps1
.cargo/: config.toml
.github/scripts/: generate_benchmark_report.py
.github/workflows/: benchmarks.yml  codeql-analysis.yml  codeql.yml  rust.yml
benches/: crypto_benches.rs
benches/aead/: aes_gcm.rs  chacha20_poly1305.rs  mod.rs
benches/asymmetric/: mod.rs
benches/asymmetric/post_quantum/: dilithium.rs  kyber.rs
benches/asymmetric/traditional/: ecc.rs  ecdh.rs  mod.rs  rsa.rs
benches/kdf/: argon2.rs  hkdf.rs  mod.rs  pbkdf2.rs  shake.rs
benches/symmetric/: aes_gcm.rs  chacha20_poly1305.rs
benches/xof/: mod.rs  shake.rs
examples/: digital_signature.rs  hybrid_encryption.rs  kdf.rs  readme.rs  xof.rs
src/: errors.rs  lib.rs  prelude.rs  schemes.rs  systems.rs  traits.rs
src/schemes/: aead.rs  asymmetric.rs  hash.rs  kdf.rs  kem.rs  sign.rs  symmetric.rs  xof.rs
src/systems/: aead.rs  asymmetric.rs  kdf.rs  symmetric.rs  xof.rs
src/systems/aead/: aes_gcm.rs  chacha20_poly1305.rs
src/systems/asymmetric/: dilithium.rs  kyber.rs  post_quantum.rs  rsa.rs  traditional.rs
src/systems/asymmetric/post_quantum/: dilithium.rs  kyber.rs
src/systems/asymmetric/traditional/: ecc.rs  ecdh.rs  rsa.rs
src/systems/kdf/: argon2.rs  hkdf.rs  pbkdf2.rs  shake.rs
src/systems/symmetric/: aes_gcm.rs  chacha20_poly1305.rs
src/systems/xof/: shake.rs
src/traits/: algorithm.rs  asymmetric.rs  hash.rs  kdf.rs  kem.rs  key.rs  params.rs  sign.rs  symmetric.rs  xof.rs
src/traits/params/: hash.rs  xof.rs
src/traits/symmetric/: aead.rs
test-runner/: Cargo.toml  TestMatrix.toml
test-runner/src/: main.rs  runner.rs
test-runner/src/runner/: command.rs  config.rs  execution.rs  models.rs  reporting.rs  utils.rs
