[package]
name = "seal-crypto"
version = "0.1.1-rc"
edition = "2021"
authors = ["GlorYouth <admin@gloryouth.com>"]
description = "A crate providing pure cryptographic capability abstractions (traits) and implementations for the seal-kit ecosystem."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GlorYouth/seal-crypto"
homepage = "https://github.com/GlorYouth/seal-crypto"
documentation = "https://docs.rs/seal-crypto"
keywords = ["cryptography", "trait", "kem", "signature", "aead"]
categories = ["cryptography"]

[dependencies]
# Cryptography Backends
rsa = { version = "0.9.8", optional = true, default-features = false }
pqcrypto-kyber = { version = "0.8.1", optional = true }
aes-gcm = { version = "0.10.3", optional = true, default-features = false, features = ["aes", "getrandom", "alloc"] }
sha2 = { version = "0.10.9", optional = true } # RSA-PSS dependency
chacha20poly1305 = { version = "0.10", optional = true, default-features = false, features = ["getrandom", "alloc"] }
pqcrypto-dilithium = { version = "0.5.0", optional = true }
digest = "0.10.7"

# Helper Crates
thiserror = { version = "2.0.12", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
rand_core = { version = "0.9.3", default-features = false }
zeroize = { version = "1.8.1", features = ["derive"] }

[features]
# --- Environment Features ---
# The `std` feature is enabled by default.
# It provides `std` integration for various dependencies (like OsRng) and enables `thiserror`.
# For `no_std` environments, disable default features: `seal-crypto = { version = "...", default-features = false }`
std = [
    "rand_core/std",
    "aes-gcm/std",
    "chacha20poly1305/std",
    "dep:thiserror",
    "rsa/std",
]

# --- Default Features ---
default = ["std"]

# --- Algorithm Primitive Features ---
# Level 1: Individual algorithm features
rsa = ["dep:rsa", "sha2"]
kyber = ["dep:pqcrypto-kyber", "dep:pqcrypto-traits"]
dilithium = ["dep:pqcrypto-dilithium", "dep:pqcrypto-traits"]
aes-gcm = ["dep:aes-gcm"]
chacha20-poly1305 = ["dep:chacha20poly1305"]
sha2 = ["dep:sha2"]

# --- Algorithm Set Features ---
# Level 2: Convenience features for algorithm sets
classic = ["rsa", "aes-gcm", "chacha20-poly1305"]
pqc = ["kyber", "dilithium"] # Post-Quantum Cryptography

avx2 = [
    "pqcrypto-dilithium/avx2",
    "pqcrypto-kyber/avx2"
]

asm = [
    "sha2/sha2-asm",
    "sha2/asm",
]

# --- Full Feature ---
# Level 3: The `full` feature activates all available algorithm implementations.
full = ["classic", "pqc"]

[[example]]
name = "digital_signature"
required-features = ["rsa"]

[[example]]
name = "hybrid_encryption"
required-features = ["kyber", "aes-gcm"] 