[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
colored = "3.0.0"
clap = { version = "4.5.40", features = ["derive"] }
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
tempfile = "3.20.0"
tokio = { version = "1.46.0", features = ["full", "sync"] }
tokio-util = { version = "0.7.15" }
futures = "0.3.31"
