[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.30"
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.46.0", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.8.23"
